--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <i class="fa fa-refresh"></i>
             </div>
             <div id="date"></div>
+            <div class="card-1"></div>
         </div>
         <div class="content">
             <ul id="list">
